--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-onclickoutside": "^6.7.4",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
+    "linkify-react": "^4.1.1",
+    "linkifyjs": "^4.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.1",
+    "@types/lodash": "^4.14.198"
   }
 }
